--- a/paco/blueprints/locker/templates/locker_qr.html
+++ b/paco/blueprints/locker/templates/locker_qr.html
@@ -10,6 +10,7 @@
                 <h5>{{ locker.town }}, {{ locker.zip_code }}, {{ locker.country }}</h5>
                 <br>
                 <h6 class="text-muted">Scan the QR code to continue</h6>
+                <p>{{ qr_info }}</p>
 
             </div>
             <div class="col col-6 justify-content-center">
