--- a/paco/templates/qr.html
+++ b/paco/templates/qr.html
@@ -3,6 +3,15 @@
 {% block content %}
     <div class="container col-xxl-8 px-4 py-5 mt-5">
         <div class="col-12">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <h3 class="fw-bold lh-1 mb-3">Scan QR</h3>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-7 rounded ">
