--- a/paco/templates/landing_user.html
+++ b/paco/templates/landing_user.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col col-md-4 col-12 mb-2">
-                    <a href="#" class="btn btn-dark d-block mb-2">
+                    <btn onclick="fillFormLanding('Torino', 'Milano')" class="btn btn-dark d-block mb-2">
                         <div class="row bg-dark text-light rounded py-4 px-3 h-100">
                             <div class="col col-6 my-auto text-start">
                                 Torino &#8594; Milano
@@ -113,11 +113,11 @@
                                 </svg>
                             </div>
                         </div>
-                    </a>
+                    </btn>
                 </div>
 
                 <div class="col col-md-4 col-12 mb-2">
-                    <a href="#" class="btn btn-dark d-block">
+                    <btn onclick="fillFormLanding('Milano', 'Bergamo')" class="btn btn-dark d-block">
                         <div class="row bg-dark text-light rounded py-4 px-3 h-100">
                             <div class="col col-6 my-auto text-start">
                                 Milano &#8594; Bergamo
@@ -131,11 +131,11 @@
                                 </svg>
                             </div>
                         </div>
-                    </a>
+                    </btn>
                 </div>
 
                 <div class="col col-md-4 col-12 mb-2">
-                    <a href="#" class="btn btn-dark d-block">
+                    <btn onclick="fillFormLanding('Aosta', 'Genova')" class="btn btn-dark d-block">
                         <div class="row bg-dark text-light rounded py-4 px-3 h-100">
                             <div class="col col-6 my-auto text-start">
                                 Aosta &#8594; Genova
@@ -149,7 +149,7 @@
                                 </svg>
                             </div>
                         </div>
-                    </a>
+                    </btn>
                 </div>
             </div>
         </div>
