--- a/paco/templates/base/base_landing.html
+++ b/paco/templates/base/base_landing.html
@@ -16,30 +16,33 @@
                         <a class="nav-link" href="#">
                             About us</a>
                     </li>
-                    <li class="nav-item active me-1">
+                    <li class="nav-item active my-auto me-1">
                         <a class="nav-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="48" fill="currentColor" class="bi bi-envelope me-1" viewBox="0 0 16 16">
+                            <i class="bi bi-envelope me-1">
                                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                            </svg>
+                            </i>
                             Send</a>
                     </li>
-                    <li class="nav-item me-3">
+                    <li class="nav-item my-auto me-3">
                         <a class="nav-link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="48" fill="currentColor" class="bi bi-box me-1" viewBox="0 0 16 16">
+                            <i class="bi bi-box me-1">
                                 <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
-                            </svg>
+                            </i>
                             Drive</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
                             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="{{ url_for('static', filename='images/default_user_image.svg') }}" alt="" class="rounded-circle">
-                            </button>
+                                {% if current_user.is_authenticated %}
+                                    <img src="{{ url_for('static', filename='profile_pics/{}'.format(current_user.image_file)) }}" alt="" class="rounded-circle" width="48" height="48">
+                                {% else %}
+                                    <img src="{{ url_for('static', filename='profile_pics/default_user_image.jpg') }}" alt="" class="rounded-circle" width="48" height="48">
+                                {% endif %}                            </button>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                 {% if current_user.is_authenticated %}
                                     <li><div class="dropdown-item-text">Hello <b>{{ current_user.username }}</b></div></li>
                                     <li><a class="dropdown-item" href="{{ url_for('show_dashboard') }}">Dashboard</a>  </li>
-                                    <li><a class="dropdown-item" href="#">Your account</a>  </li>
+                                    <li><a class="dropdown-item" href="{{ url_for('user.settings') }}">Your account</a>  </li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
                                 {% else %}
