Modified blueprints, added static pages, modified js

--- a/paco/blueprints/auth/templates/verify_email.html
+++ b/paco/blueprints/auth/templates/verify_email.html
@@ -15,6 +15,7 @@
             <h4 class="fw-bold lh-1 mb-3">We need your confirmation!</h4>
             <p>Thanks for signing up to Paco!</p>
             <p>Before sending or driving we need you to confirm your email!</p>
+            <p>We sent an email at <b>{{ current_user.email }}</b></p>
             <p>Check your email and confirm your email address!</p>
         </div>
     </div>
