--- a/paco/blueprints/driver/templates/session/next.html
+++ b/paco/blueprints/driver/templates/session/next.html
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a class="nav-link btn btn-success text-white rounded-pill px-3" href="{{ url_for('scan_qr') }}">
+                    <a class="nav-link btn btn-success text-white rounded-pill px-3" href="{{ url_for('main.scan_qr') }}">
                         <i class="bi bi-qr-code-scan me-1"></i>
                         Scan QR code
                     </a>
