--- a/paco/templates/base/base.html
+++ b/paco/templates/base/base.html
@@ -13,6 +13,8 @@
         <link rel=stylesheet type=text/css href="{{ ASSET_URL }}">
     {% endassets %}
 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 </head>
 <body>
     {% block body %}
