--- a/paco/templates/base/base_landing.html
+++ b/paco/templates/base/base_landing.html
@@ -13,18 +13,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fs-6">
                     <li class="nav-item active mt-4 mb-2 my-md-auto me-1 ">
-                        <a class="nav-link" href="#">
-                            About us</a>
+                        <a class="nav-link" href="{{ url_for('main.our_vision') }}">
+                            Our vision</a>
                     </li>
                     <li class="nav-item active my-auto me-1">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{{ url_for('main.index') }}">
                             <i class="bi bi-envelope me-1">
                                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                             </i>
                             Send</a>
                     </li>
                     <li class="nav-item my-auto me-3">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{{ url_for('main.landing_driver') }}">
                             <i class="bi bi-box me-1">
                                 <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
                             </i>
@@ -41,7 +41,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                 {% if current_user.is_authenticated %}
                                     <li><div class="dropdown-item-text">Hello <b>{{ current_user.username }}</b></div></li>
-                                    <li><a class="dropdown-item" href="{{ url_for('show_dashboard') }}">Dashboard</a>  </li>
+                                    <li><a class="dropdown-item" href="{{ url_for('user.dashboard') }}">Dashboard</a>  </li>
                                     <li><a class="dropdown-item" href="{{ url_for('user.settings') }}">Your account</a>  </li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a></li>
@@ -72,26 +72,28 @@
                 <ul class="list-unstyled text-small">
                     <li class="text-muted">Corso Duca degli Abruzzi, 24</li>
                     <li class="text-muted">10129 Torino, Italy</li>
-                    <li class="text-muted"><a class="text-muted" href="mailto:info@pacodelivery.com">info@pacodelivery.com</a></li>
+                    <li class="text-muted"><a class="text-muted" href="mailto:pacodelivery@libero.it">pacodelivery@libero.it</a></li>
                     <li class="text-muted"><a class="text-muted" href="tel:+390114476139">+39 0114476139</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-4 col-sm-6">
                 <h5>About us</h5>
                 <ul class="list-unstyled text-small">
+                    <!--
                     <li><a class="text-muted" href="#">How it works</a></li>
-                    <li><a class="text-muted" href="#">Our vision</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
+                    -->
+                    <li><a class="text-muted" href="{{ url_for('main.our_vision') }}">Our vision</a></li>
+                    <li><a class="text-muted" href="{{ url_for('main.locations') }}">Locations</a></li>
 
                 </ul>
             </div>
             <div class="col-12 col-md-4 col-sm-6">
                 <h5>Resources</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Send a parcel</a></li>
-                    <li><a class="text-muted" href="#">Drive your car</a></li>
-                    <li><a class="text-muted" href="#">Login</a></li>
-                    <li><a class="text-muted" href="#">Sign up</a></li>
+                    <li><a class="text-muted" href="{{ url_for('main.index') }}">Send a parcel</a></li>
+                    <li><a class="text-muted" href="{{ url_for('main.landing_driver') }}">Drive your car</a></li>
+                    <li><a class="text-muted" href="{{ url_for('auth.login') }}">Login</a></li>
+                    <li><a class="text-muted" href="{{ url_for('auth.signup') }}">Sign up</a></li>
                 </ul>
             </div>
 
