--- a/paco/templates/emails/verification_email.html
+++ b/paco/templates/emails/verification_email.html
@@ -1,4 +1,8 @@
-<p>Welcome! Thanks for signing up. Please follow this link to activate your account:</p>
-<p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
-<br>
-<p>Cheers!</p>
+{% extends 'emails/base_email.html' %}
+
+{% block content %}
+    <p>Welcome! Thanks for signing up. Please follow this link to activate your account:</p>
+    <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
+    <br>
+    <p>Cheers!</p>
+{% endblock %}
