--- a/paco/blueprints/auth/templates/reset_token.html
+++ b/paco/blueprints/auth/templates/reset_token.html
@@ -12,27 +12,19 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <h4 class="fw-bold lh-1 mb-3">Login</h4>
+            <h4 class="fw-bold lh-1 mb-3">Reset password</h4>
             <form class="p-1 p-md-1 form-floating" method="POST" action="">
+                <p>Insert the email that you used to sign up to Paco:</p>
                 {{  form.hidden_tag() }}
                 <div class="form-floating">
-                    {{ form.email(class="form-control form-control-lg mb-3 rounded-pill px-4", placeholder="Email") }}
-                    {{ form.email.label(class="px-4") }}
-                </div>
-                <div class="form-floating">
-                    {{ form.password(class="form-control form-control-lg mb-3 rounded-pill px-4", placeholder="Password") }}
+                    {{ form.password(class="form-control form-control-lg mb-3 rounded-pill px-4", placeholder="New password") }}
                     {{ form.password.label(class="px-4") }}
                 </div>
-                <div class="row mb-3 px-3">
-                    <div class="form-check form-switch">
-                        {{ form.remember_me.label(class="form-check-label") }}
-                        {{ form.remember_me(class="form-check-input") }}
-                    </div>
+                <div class="form-floating">
+                    {{ form.confirm_password(class="form-control form-control-lg mb-3 rounded-pill px-4", placeholder="Repeat new password") }}
+                    {{ form.confirm_password.label(class="px-4") }}
                 </div>
                 {{ form.submit(class="w-100 btn btn-lg btn-primary rounded-pill") }}
-                <p class="mt-3 text-center">You don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up here</a></p>
-                <p class="mt-3 text-center">Forgot password? <a href="{{ url_for('auth.request_reset_password') }}">Reset it</a></p>
-
             </form>
         </div>
     </div>
