Changed pricing, Models etc etc

--- a/paco/blueprints/delivery/templates/create/create_delivery_choose_lockers.html
+++ b/paco/blueprints/delivery/templates/create/create_delivery_choose_lockers.html
@@ -67,7 +67,7 @@
                         {{ form.fragile(class="form-check-input") }}
                     </div>
                 </div>
-                {{ form.submit(class="w-100 btn btn-lg btn-success rounded-pill") }}
+                {{ form.submit(class="w-100 btn btn-lg btn-success text-white rounded-pill") }}
             </form>
         </div>
     </div>
