--- a/paco/blueprints/delivery/templates/create/create_delivery_confirm.html
+++ b/paco/blueprints/delivery/templates/create/create_delivery_confirm.html
@@ -70,7 +70,7 @@
                     {{ form.email_recipient.label(class="px-4") }}
                 </div>
                 {{ form.hidden_tag() }}
-                {{ form.submit(class="w-100 btn btn-lg btn-success rounded-pill") }}
+                {{ form.submit(class="w-100 btn btn-lg btn-success text-white rounded-pill") }}
             </form>
         </div>
     </div>
