--- a/paco/blueprints/driver/templates/car/confirm.html
+++ b/paco/blueprints/driver/templates/car/confirm.html
@@ -68,7 +68,7 @@
             </div>
             <form class="p-1 p-md-1 mb-3" method="POST" action="{{ url_for('driver.confirm_car') }}">
                 {{ form.hidden_tag() }}
-                {{ form.submit(class="w-100 btn btn-lg btn-success rounded-pill") }}
+                {{ form.submit(class="w-100 btn btn-lg btn-success text-white rounded-pill") }}
             </form>
         </div>
     </div>
