--- a/paco/blueprints/main/templates/landing_driver.html
+++ b/paco/blueprints/main/templates/landing_driver.html
@@ -27,9 +27,11 @@
                     <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
                     <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
                 </svg>
-                <h5>Send your parcels where you want at a low cost
+                <h5>
+                    Save some money
                 </h5>
-                <p>You can choose among different lockers in which you can drop off and collect the parcels
+                <p>
+                    Thanks to our app, you can save up to 100% of your trip expenses.
                 </p>
             </div>
             <div class="col col-md-4 col-12">
@@ -48,9 +50,10 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="40" fill="#0F2043" class="bi bi-phone-flip mb-3" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v6a.5.5 0 0 1-1 0V2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v6a.5.5 0 0 1-1 0V2a1 1 0 0 0-1-1Zm1 13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-2a.5.5 0 0 0-1 0v2a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-2a.5.5 0 0 0-1 0v2ZM1.713 7.954a.5.5 0 1 0-.419-.908c-.347.16-.654.348-.882.57C.184 7.842 0 8.139 0 8.5c0 .546.408.94.823 1.201.44.278 1.043.51 1.745.696C3.978 10.773 5.898 11 8 11c.099 0 .197 0 .294-.002l-1.148 1.148a.5.5 0 0 0 .708.708l2-2a.5.5 0 0 0 0-.708l-2-2a.5.5 0 1 0-.708.708l1.145 1.144L8 10c-2.04 0-3.87-.221-5.174-.569-.656-.175-1.151-.374-1.47-.575C1.012 8.639 1 8.506 1 8.5c0-.003 0-.059.112-.17.115-.112.31-.242.6-.376Zm12.993-.908a.5.5 0 0 0-.419.908c.292.134.486.264.6.377.113.11.113.166.113.169 0 .003 0 .065-.13.187-.132.122-.352.26-.677.4-.645.28-1.596.523-2.763.687a.5.5 0 0 0 .14.99c1.212-.17 2.26-.43 3.02-.758.38-.164.713-.357.96-.587.246-.229.45-.537.45-.919 0-.362-.184-.66-.412-.883-.228-.223-.535-.411-.882-.571ZM7.5 2a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1Z"/>
                 </svg>
-                <h5>Scroll, click, tap, send and track
+                <h5>Scroll, click, tap, drive
                 </h5>
-                <p>Sending a parcel has never been easier!  Thanks to our easy to use app, your next delivery is just a couple of minutes away! And tracking is available to you real time!
+                <p>
+                    Helping someone has never been easier! Thanks to our easy to use app, your next delivery is just a couple of minutes away!
                 </p>
             </div>
         </div>
@@ -71,7 +74,7 @@
                                 Torino &#8594; Milano
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">14€</strong></span>
+                                <span><strong class="h4">20€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
@@ -89,7 +92,7 @@
                                 Milano &#8594; Bergamo
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">6€</strong></span>
+                                <span><strong class="h4">10€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
@@ -107,7 +110,7 @@
                                 Aosta &#8594; Genova
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">25€</strong></span>
+                                <span><strong class="h4">30€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
