--- a/paco/blueprints/main/templates/landing_user.html
+++ b/paco/blueprints/main/templates/landing_user.html
@@ -77,7 +77,7 @@
                 </h5>
                 <p>
                     Reduce CO2 emissions related to parcel delivery.
-                    Have a look at our sustainability commitment to see more
+                    Have a look at our <a href="{{ url_for('main.our_vision') }}">sustainability commitment</a> to see more
                 </p>
             </div>
             <div class="col col-md-4 col-12">
@@ -94,6 +94,9 @@
         <!-- EXAMPLES -->
         <div class="row border-top pt-3 mb-3">
             <h3>Where do you want to ship it?</h3>
+            <div class="row mb-3 text-muted">
+            <h5>Prices start from:</h5>
+        </div>
         </div>
 
         <div class="container">
@@ -105,7 +108,7 @@
                                 Torino &#8594; Milano
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">14€</strong></span>
+                                <span><strong class="h4">8,36€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
@@ -123,7 +126,7 @@
                                 Milano &#8594; Bergamo
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">6€</strong></span>
+                                <span><strong class="h4">3,18€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
@@ -141,7 +144,7 @@
                                 Aosta &#8594; Genova
                             </div>
                             <div class="col col-6 col-md-4 my-auto text-end">
-                                <span><strong class="h4">25€</strong></span>
+                                <span><strong class="h4">13,87€</strong></span>
                             </div>
                             <div class="col col-2 d-none d-md-block my-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
