--- a/paco/blueprints/user/templates/user_settings.html
+++ b/paco/blueprints/user/templates/user_settings.html
@@ -164,7 +164,7 @@
                                 </table>
 
                             </div>
-                            <a href="{{ url_for('driver.add_car') }}" role="button" class="btn btn-success rounded-pill w-100">
+                            <a href="{{ url_for('driver.add_car') }}" role="button" class="btn btn-success text-white rounded-pill w-100">
                                 <i class="bi bi-plus-lg"></i>
                                 Add car
                             </a>
