--- a/paco/static/assets/main.scss
+++ b/paco/static/assets/main.scss
@@ -1,5 +1,6 @@
 $primary: #3361AC;
 $dark: #0F2043;
+$success: #469f44;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
